Fixed alignment issues of G+ buttons. Updated to new G+ platform.js library.

--- a/war/app/css/gdg.css
+++ b/war/app/css/gdg.css
@@ -139,3 +139,9 @@ md-card a {
 a:hover {
     text-decoration: underline;
 }
+news-item-footer [id*="___plusone"] {
+    padding-top: 12px !important;
+}
+md-toolbar [id*="___plusone"] {
+    padding-top: 5px !important;
+}
